agrega cambios a index y amenazas

--- a/index.html
+++ b/index.html
@@ -1,11 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ciberseguridad Website</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+
 </head>
+
 <body>
-    
+
+    <!-- Main -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">CiberSeguridad</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="amenazas.html">Amenazas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="consejos.html">Consejos</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <header class="hero text-white text-center py-5">
+        <img src="img/cyb.jpg" alt="Ciberseguridad" class="img-hero">
+        <div class="container-fluid position-relative" style="z-index: 2;">
+            <h1 class="display-4 font-weight-bold mb-3" style="word-break:break-word;">
+                Protegiendo tu mundo digital.
+            </h1>
+            <p class="lead mb-0">Expertos en servicios de ciberseguridad.</p>
+        </div>
+    </header>
+
+    <section class="py-5">
+        <div class="container">
+            <h2 class="mb-4 text text-center">¿Qué es la ciberseguridad?</h2>
+            <p>
+                La ciberseguridad es la práctica de defender las computadoras, los servidores, los dispositivos móviles,
+                los sistemas electrónicos, las redes y los datos de ataques maliciosos. También se conoce como seguridad
+                de tecnología de la información o seguridad de la información electrónica
+            </p>
+        </div>
+    </section>
+    <!-- ¿Para qué sirve la ciberseguridad? -->
+    <section class="py-5 bg-light">
+        <div class="container">
+            <h2 class="text-center mb-4">¿Para qué sirve la ciberseguridad?</h2>
+            <div class="row g-4">
+                <div class="col-md-6 d-flex">
+                    <div class="me-3 fs-2 text-primary">
+                        <i class="bi bi-shield-lock-fill"></i>
+                    </div>
+                    <div>
+                        <h5>Proteger la información personal</h5>
+                        <p>Evita que tu nombre, dirección, contraseñas o datos bancarios caigan en manos equivocadas.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6 d-flex">
+                    <div class="me-3 fs-2 text-success">
+                        <i class="bi bi-laptop"></i>
+                    </div>
+                    <div>
+                        <h5>Garantizar el funcionamiento de dispositivos</h5>
+                        <p>Evita virus o malware que dañen o ralenticen tus equipos y redes.</p>
+                    </div>
+                </div>
+                <div class="col-md-6 d-flex">
+                    <div class="me-3 fs-2 text-warning">
+                        <i class="bi bi-lock"></i>
+                    </div>
+                    <div>
+                        <h5>Prevenir el robo de identidad</h5>
+                        <p>Impide que otros se hagan pasar por ti para cometer fraudes o delitos.</p>
+                    </div>
+                </div>
+                <div class="col-md-6 d-flex">
+                    <div class="me-3 fs-2 text-danger">
+                        <i class="bi bi-globe2"></i>
+                    </div>
+                    <div>
+                        <h5>Fomentar un internet más seguro</h5>
+                        <p>Con buenas prácticas contribuimos a una red más confiable y libre de amenazas.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Footer -->
+    <footer class="bg-light text-center py-4">
+        <div class="container">
+            <p class="m-0">© 2025 CiberSeguridad</p>
+        </div>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
+
 </html>
