agrega informacion a consejos y correccion de inicio y amenazas

--- a/amenazas.html
+++ b/amenazas.html
@@ -1,94 +1,95 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ciberseguridad Website</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 </head>
+
 <body>
 
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">CiberSeguridad</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="amenazas.html">Amenazas</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="consejos.html">Consejos</a>
-                </li>
-            </ul>
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">CiberSeguridad</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="amenazas.html">Amenazas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="consejos.html">Consejos</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
-    <!-- Main-->
-    <header class="hero text-white text-center py-5" >
+    <!-- Hero Section -->
+    <header class="hero text-white text-center py-5">
         <img src="img/amenazas-ciberneticas.jpg" alt="Ciberseguridad" class="img-hero">
-        <div class="container position-relative" style="z-index: 2;">
+        <div class="container-fluid position-relative" style="z-index: 2;">
             <h1 class="display-4 font-weight-bold mb-3" style="word-break:break-word;">
                 Amenazas Digitales
             </h1>
             <p class="lead mb-0">¿Estás realmente protegido?</p>
         </div>
     </header>
+    <!-- Amenazas -->
     <section class="py-5">
         <div class="container">
-            <h2 class="mb-4 text text-center">¿Estas realmente protegido?</h2>
-            <p>
-                La ciberseguridad es la práctica de defender las computadoras, los servidores, los dispositivos móviles, los sistemas electrónicos, las redes y los datos de ataques maliciosos. También se conoce como seguridad de tecnología de la información o seguridad de la información electrónica
-            </p>
+            <h2 class="mb-4 text-center">¿Cuáles son las amenazas digitales más comunes?</h2>
+            <div class="row">
+                <div class="col-md-6 col-lg-3 mb-4">
+                    <div class="card h-100 shadow threat-hover">
+                        <div class="card-body">
+                            <h5 class="card-title">Phishing</h5>
+                            <p class="card-text">Engaños para obtener información confidencial haciéndose pasar por
+                                entidades legítimas.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3 mb-4">
+                    <div class="card h-100 shadow threat-hover">
+                        <div class="card-body">
+                            <h5 class="card-title">Ransomware</h5>
+                            <p class="card-text">Malware que cifra archivos y exige un rescate para restaurar el acceso.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3 mb-4">
+                    <div class="card h-100 shadow threat-hover">
+                        <div class="card-body">
+                            <h5 class="card-title">Malware</h5>
+                            <p class="card-text">Software malicioso diseñado para dañar o acceder sin autorización a
+                                sistemas.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3 mb-4">
+                    <div class="card h-100 shadow threat-hover">
+                        <div class="card-body">
+                            <h5 class="card-title">Ataques DDoS</h5>
+                            <p class="card-text">Saturación de servicios en línea mediante múltiples solicitudes
+                                simultáneas.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
-    <!-- Amenazas Digitales -->
-    <section class="py-5">
-    <div class="container">
-        <h2 class="mb-4 text-center">¿Cuáles son las amenazas digitales más comunes?</h2>
-        <div class="row">
-            <div class="col-md-6 col-lg-3 mb-4">
-                <div class="card h-100 shadow threat-hover">
-                    <div class="card-body">
-                        <h5 class="card-title">Phishing</h5>
-                        <p class="card-text">Engaños para obtener información confidencial haciéndose pasar por entidades legítimas.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3 mb-4">
-                <div class="card h-100 shadow threat-hover">
-                    <div class="card-body">
-                        <h5 class="card-title">Ransomware</h5>
-                        <p class="card-text">Malware que cifra archivos y exige un rescate para restaurar el acceso.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3 mb-4">
-                <div class="card h-100 shadow threat-hover">
-                    <div class="card-body">
-                        <h5 class="card-title">Malware</h5>
-                        <p class="card-text">Software malicioso diseñado para dañar o acceder sin autorización a sistemas.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3 mb-4">
-                <div class="card h-100 shadow threat-hover">
-                    <div class="card-body">
-                        <h5 class="card-title">Ataques DDoS</h5>
-                        <p class="card-text">Saturación de servicios en línea mediante múltiples solicitudes simultáneas.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
 
     <!-- Footer -->
     <footer class="bg-light text-center py-4">
@@ -97,9 +98,8 @@
         </div>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/scripts.js"></script>
 </body>
+
 </html>
