--- a/consejos.html
+++ b/consejos.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ciberseguridad Website</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Consejos de Ciberseguridad</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 </head>
-
 <body>
-
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
+        <div class="container-fluid">
             <a class="navbar-brand" href="#">CiberSeguridad</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,22 +19,85 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="amenazas.html">Amenazas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="consejos.html">Consejos</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="amenazas.html">Amenazas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="consejos.html">Consejos</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
 
     <!-- Hero -->
-    <section class="bg-primary text-white text-center py-5">
+    <header class="hero text-white text-center py-5">
+        <img src="img/cyber.jpg" alt="Ciberseguridad" class="img-hero">
+        <div class="container-fluid position-relative" style="z-index: 2;">
+            <h1 class="display-5 font-weight-bold mb-3" style="word-break:break-word;">
+                Consejos de ciberseguridad
+            </h1>
+            <p class="lead mb-0">¿Cómo protegerte?</p>
+        </div>
+    </header>
+
+    <!-- Carrusel de Consejos -->
+    <section class="py-5 bg-light">
         <div class="container">
-            <h1 class="display-4">Bienvenidos a CiberSeguridad</h1>
-            <p class="lead">Protege tu información, aprende a cuidarte en el mundo digital.</p>
+            <div id="carouselConsejos" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <!-- Consejo 1 -->
+                    <div class="carousel-item active">
+                        <div class="card mx-auto" style="max-width: 400px;">
+                            <div class="ratio ratio-4x3">
+                                <img src="img/secPass.jpg" class="card-img-top" alt="Contraseñas">
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Usa contraseñas seguras</h5>
+                                <p class="card-text">Combina letras, números y símbolos. Evita usar la misma en diferentes sitios.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Consejo 2 -->
+                    <div class="carousel-item">
+                        <div class="card mx-auto" style="max-width: 400px;">
+                            <div class="ratio ratio-4x3">
+                                <img src="img/update.jpg" class="card-img-top" alt="Actualizaciones">
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Actualiza tu software</h5>
+                                <p class="card-text">Instala las actualizaciones para corregir errores de seguridad en tus dispositivos.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Consejo 3 -->
+                    <div class="carousel-item">
+                        <div class="card mx-auto" style="max-width: 400px;">
+                            <div class="ratio ratio-4x3">
+                                <img src="img/redpu.jpg" class="card-img-top" alt="WiFi">
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Evita redes WiFi públicas</h5>
+                                <p class="card-text">Usa VPN o evita compartir información sensible cuando estés en redes abiertas.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Controles -->
+                <button class="carousel-control-prev bg-dark" type="button" data-bs-target="#carouselConsejos" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                </button>
+                <button class="carousel-control-next bg-dark" type="button" data-bs-target="#carouselConsejos" data-bs-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                </button>
+            </div>
         </div>
     </section>
 
+    
     <!-- Footer -->
     <footer class="bg-light text-center py-4">
         <div class="container">
@@ -43,22 +105,7 @@
         </div>
     </footer>
 
-    <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        // Validación de formulario básica
-        document.getElementById('contactForm').addEventListener('submit', function (e) {
-            e.preventDefault();
-            const form = e.target;
-            if (!form.checkValidity()) {
-                form.classList.add('was-validated');
-            } else {
-                form.classList.remove('was-validated');
-                document.getElementById('formSuccess').classList.remove('d-none');
-                form.reset();
-            }
-        });
-    </script>
+    <script src="js/scripts.js"></script>
 </body>
-
 </html>
