--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <p class="m-0">© 2025 CiberSeguridad</p>
         </div>
     </footer>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/scripts.js"></script>
 </body>
